# qTen

./: .gitignore  README.md  mkdocs.yml  properdocs.yml  pyproject.toml  test.py  tox.ini  try.py
.github/workflows/: ci.yml  pages.yml
docs/: build-docs.md  gen_ref_pages.py  index.md  installation.md  plot-methods.md
docs/javascripts/: mathjax.js
ext/plots/: README.md  pyproject.toml
ext/plots/src/qten_plots/: __init__.py  _mpl_impl.py  _plotly_impl.py  _utils.py  plottables.py
scripts/: publish_pypi.sh  release_patch.py  test_built_wheels.sh
src/pyhilbert/: abstracts.py  affine_transform.py  basis_transform.py  boundary.py  decompose.py  fourier.py  hilbert_space.py  hilbert_space.pyi  modules.py  plots.py  plots_mpl.py  spatials.py  state_space.py  symbolics.py  tensors.py  utils.py
src/pyhilbert/validations/: __init__.py  _validations.py  symbolics.py
src/qten/: __init__.py  abstracts.py  abstracts.pyi  affine_transform.py  bands.py  hilbert_space.py  hilbert_space.pyi  ops.py  optim.py  plots.py  plots_mpl.py  precision.py  state_space.py  tensors.py
src/qten/geometries/: __init__.py  basis_transform.py  boundary.py  fourier.py  fourier.pyi  ops.py  spatials.py  spatials.pyi
src/qten/linalg/: __init__.py  decompose.py  tensors.py  tensors.pyi
src/qten/phys/: __init__.py  _bonds.py  _ff_observables.py
src/qten/plottings/: __init__.py  _mpl_impl.py  _plotly_impl.py  _plottings.py  _utils.py  base.py
src/qten/pointgroups/: __init__.py  _pointgroups.py  abelian.py  abelian.pyi  ops.py
src/qten/symbolics/: __init__.py  _base.py  base.py  hilbert_space.py  hilbert_space.pyi  ops.py  state_space.py  state_space.pyi
src/qten/utils/: __init__.py  collections_ext.py  devices.py  io.py  loggings.py  types_ext.py
src/qten/validations/: __init__.py  _validations.py  symbolics.py
tests/: test_abelian.py  test_abstracts.py  test_affine_transform.py  test_bands.py  test_basis_transform.py  test_boundary.py  test_decompose.py  test_fourier.py  test_geometry_ops.py  test_gpu.py  test_hilbert.py  test_io.py  test_modules.py  test_plots.py  test_pointgroup_ops.py  test_precision.py  test_spatials.py  test_state_space_validations.py  test_tensors.py  test_tensors_autograd.py  test_tensors_cross_device.py  test_tensors_indexing.py  test_utils.py  test_validations.py
