[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qten"
version = "0.2.0"
description = "Torch-based tensors, lattices, symmetries, and band-structure tools for quantum lattice models."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "alphaharrius" },
  { name = "eyjafjallac" },
]
dependencies = [
    "multimethod>=2.0",
    "numpy>=2.0.0",
    "sympy>=1.14.0",
    "torch>=2.7.0",
    "typing_extensions>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=4.0.0",
    "ruff==0.14.11",
    "mypy>=1.14.0",
    "pandas-stubs>=2.0.0",
    "qten_plots",
    "build>=1.2.2",
    "twine>=6.1.0",
]
docs = [
    "properdocs>=1.0.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocstrings[python]>=0.30.0",
]

[tool.uv]
package = true

conflicts = [
  [ { extra = "cpu" }, { extra = "cu126" }, { extra = "cu128" }, { extra = "cu129" }, { extra = "cu130" } ],
]

[tool.uv.sources]
qten = { workspace = true }
qten_plots = { workspace = true }

[tool.uv.workspace]
members = [
    "ext/plots",
]

[tool.ruff.lint]
    extend-ignore = ["F811"]

[[tool.mypy.overrides]]
module = "multimethod"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "sympy"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.setuptools.package-data]
qten = ["py.typed"]
"*" = ["*.pyi"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
